--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,10 @@ a{
     text-decoration: none;
 }
 
+ul{
+    list-style: none;
+}
+
 .cabecalho{
     background-image: url('../imagens/5.jpg');
     background-repeat: no-repeat;
@@ -238,42 +242,108 @@ a{
     background-color: #4546EC;
  }
 
- /* Cards Blog */
+/* Blog */
 
- /* .cards-blog{
+.blog{
     display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 40px;
+    border-bottom: 1px solid rgba(0,0,0,0.05);
+}
+
+.blog-heading{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.blog-heading span{
+    color: #f33c3c;
+}
+
+.blog-heading h3{
+    font-size: 2.4rem;
+    color: #2b2b2b;
+    font-weight: 600;
+}
+
+.blog-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 20px 0px;
     flex-wrap: wrap;
-    background-color: #f3ededd8;
+}
+
+.blog-box{
+    width: 350px;
+    background-color: #ffffff;
+    border-bottom: 1px solid rgba(0,0,0,0.05);
+    margin: 0px 20px;
+}
+
+.blog-img{
+    width: 100%;
+    height: auto;
+}
+
+.blog-img img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+}
+
+.blog-text{
+    padding: 30px;
+    display: flex;
+    flex-direction: column;
+}
+
+.blog-text span{
+    color: #f33c3c;
+    font-size: 0.9rem;
+}
+
+.blog-text span{
+    color: #f33c3c;
+    font-size: 0.9rem;
+}
+
+.blog-text .blog-title{
+    font-size: 1.3rem;
+    font-weight: 500;
+    color: #272727;
+}
+
+.blog-text .blog-title:hover{
+    color: #f33c3c;
+    transition: all ease 0.3s;
+}
+
+.blog-text p{
+   color: #9b9b9b;
+   font-size: 0.9rem;
+   display: -webkit-box;
+   -webkit-line-clamp: 3;
+   -webkit-box-orient: vertical;
+   overflow: hidden;
+   text-overflow: ellipsis;
+   margin: 20px 0px;
+}
+
+.blog-text a{
+    color: #0f0f0f;
  }
 
- .cards-blog div{
-    flex: 1 1 200px;
-    margin: 10px;
-    border-radius: 10px;
-    background-color: white;
+ .blog-text a:hover{
+    color: #f33c3c;
+    transition: all ease 0.3s;
  }
 
- .cards-blog div img{
-    border-radius: 10px 10px 0px 0px;
- }
-
- .cards-blog h2{
-    padding: 10px;
- }
-
- .cards-blog > div > p{
-    color: black;
-    font-size: 20px;
-    padding: 10px;
- }
-
- .cards-blog > div > a{
-    display: block;
-    color: black;
-    font-size: 18px;
-    padding: 20px 10px;
-    text-decoration: underline;
- } */
 
  /* Footer */
 
