Código html modificado

--- a/css/style.css
+++ b/css/style.css
@@ -412,7 +412,7 @@ ul{
     margin: 0px 10px;
  }
 
- .create{
+ /* .create{
     text-align: center;
     background-color: #4546EC;
     padding: 10px 0px;
@@ -422,7 +422,7 @@ ul{
     color: white;
     font-size: 15px;
  }
- 
+  */
 
 /* Header */
 
