--- a/css/contato.css
+++ b/css/contato.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+img{
+    max-width: 100%;
+}
+
 a{
     text-decoration: none;
 }
@@ -16,6 +20,22 @@ body{
     font-family: sans-serif;
 }
 
+/* Perguntas Frequentes */
+
+article{
+    margin: 0 20px;
+}
+
+article p{
+    padding: 10px 0px;
+}
+
+details{
+    margin: 20px 0px;
+}
+
+/* Formulário */
+
 .container{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -24,8 +44,8 @@ body{
 
 .formulario{
     background-color: rgb(237, 232, 243);
-    padding: 100px 50px;
-    margin: 100px 20px;
+    padding: 80px 50px;
+    margin: 50px 20px;
     border-radius: 10px;
 }
 
@@ -33,12 +53,13 @@ body{
     font-size: 40px;
     margin-left: 10px;
     margin-bottom: 10px;
-    text-align: center;
 }
 
 .formulario-img{
     text-align: center;
     padding: 0px 50px;
+    max-width: 500px;
+    margin: auto;
 }
 
 .formulario-img p{
@@ -48,9 +69,6 @@ body{
     line-height: 1.4;
 }
 
-.formulario-img > img{
-    padding: 0px 0px;
-}
 .formulario input{
     width: 500px;
     padding: 10px;
@@ -75,4 +93,38 @@ body{
 
 .formulario button:hover{
     background-color: #190e8e;
+}
+
+@media(max-width: 1115px){
+    .container{
+        grid-template-columns: 1fr;
+        text-align: left;
+    }
+
+    .formulario h1{
+        text-align: left;
+    }
+
+    .formulario-img{
+        text-align: center;
+        padding: 0px 50px;
+        max-width: none;
+        margin: 0;
+    }
+
+    .formulario input{
+        width: 100%;
+        padding: 10px;
+        margin: 10px;
+    }
+    
+    .formulario textarea{
+        width: 100%;
+        padding: 10px;
+        margin: 10px;
+    }
+
+    .formulario button{
+       width: 100%;
+    }
 }
