--- a/css/contato.css
+++ b/css/contato.css
@@ -44,8 +44,8 @@ details{
 
 .formulario{
     background-color: rgb(237, 232, 243);
-    padding: 80px 50px;
-    margin: 50px 20px;
+    padding: 100px 50px 200px 50px;
+    /* margin: 50px 20px; */
     border-radius: 10px;
 }
 
