--- a/css/servicos.css
+++ b/css/servicos.css
@@ -3,25 +3,25 @@ img{
     max-width: 100%;
 }
 
+h1{
+    text-align: center;
+    font-size: 40px;
+    margin-top: 100px;
+}
+
 .servicos{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     text-align: center;
-    margin: 100px 50px;
+    margin: 50px 50px;
 }
 
 .servicos > div{
-    border: 1px solid rgb(207, 204, 204);
     border-radius: 10px;
     margin: 10px;
     padding: 50px 10px 80px 10px;
-}
-
-.servicos > div{
-    border: 1px solid rgb(207, 204, 204);
-    border-radius: 10px;
-    margin: 10px;
-    padding: 50px 10px 80px 10px;
+    box-shadow: 0.6rem 0.6rem 1.2rem rgb(230, 228, 228),
+                -0.6rem -0.6rem 1rem rgb(230, 228, 228);
 }
 
 .servicos h3{
