--- a/css/servicos.css
+++ b/css/servicos.css
@@ -6,7 +6,7 @@ img{
 h1{
     text-align: center;
     font-size: 40px;
-    margin-top: 100px;
+    margin: 50px 0px;
 }
 
 .servicos{
@@ -17,7 +17,7 @@ h1{
 
 .servicos > div{
     border-radius: 10px;
-    margin: 10px;
+    margin: 0px 20px 100px 20px;
     padding: 50px 10px 50px 10px;
     box-shadow: 0.6rem 0.6rem 1.2rem rgb(230, 228, 228),
                 -0.6rem -0.6rem 1rem rgb(230, 228, 228);
@@ -33,11 +33,32 @@ h1{
    line-height: 1.4;
 }
 
+.servicos  a{
+   display: block;
+   color: white;
+   background: blue;
+   padding: 10px;
+   border-radius: 10px;
+   max-width: 120px;
+   margin: 30px auto auto auto;
+   font-size: 20px;
+}
+
+
 @media(max-width: 900px){
+
+    h1{
+        text-align: center;
+        font-size: 40px;
+        margin: 30px;
+    }
+
     .servicos{
         grid-template-columns: 1fr;
     }
 
-    
+    .servicos > div{
+        margin: 30px 20px;
+    }
     
 }
